<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Medico_Datos"
    android:background="@android:color/white">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:ignore="MissingConstraints">
        <!--Imagen de Usuario-->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/user" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--Información-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nombreMedicoTextView"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/nombreMedicoTextView"
                    android:textColor="#23a38c"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/custom_person_icon"
                    android:background="@drawable/custom_input"
                    android:drawablePadding="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:layout_marginTop="8dp"
                    android:text="Hola"
                    android:textColor="#23a38c"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/especialidadMedicoTextView"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/especialidadMedicoTextView"
                    android:textColor="#23a38c"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtEspecialidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/custom_people_icon"
                    android:background="@drawable/custom_input"
                    android:drawablePadding="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="Hola"
                    android:textColor="#23a38c"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/cedulaMedicoTextView"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/cedulaMedicoTextView"
                    android:textColor="#23a38c"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtCedula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/custom_lock_icon"
                    android:background="@drawable/custom_input"
                    android:drawablePadding="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="Hola"
                    android:textColor="#23a38c"
                    android:textSize="18sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/telefonoMedicoTextView"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/telefonoMedicoTextView"
                    android:textColor="#23a38c"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/custom_people_icon"
                    android:background="@drawable/custom_input"
                    android:drawablePadding="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="Hola"
                    android:textColor="#23a38c"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_rounded"
                android:drawableStart="@drawable/call_ico"
                android:drawablePadding="10dp"
                android:padding="15dp"
                android:text="@string/llamar"
                android:textColor="#fff"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>